fix: change title letter spacing

--- a/shelter/pages/shared.css
+++ b/shelter/pages/shared.css
@@ -99,7 +99,7 @@ ul {
   font-weight: 400;
   font-size: 35px;
   line-height: 45.5px;
-  letter-spacing: 0.06em;
+  letter-spacing: 110%;
 }
 
 .header {
